--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,6 +92,9 @@ RuntimeGeneration=Dynamic
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
