[更新] =====攻擊判定邏輯、雙刀受擊動畫=====
.攻擊判定邏輯新增補間判定
.雙刀受擊邏輯更改(新增S、M、L)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=PlagueProject
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/UE_StartContent/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Map/TestMap.TestMap
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
 bUseSplitscreen=True
@@ -124,5 +124,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
