更新 破壞物基底BP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,6 @@ GameInstanceClass=/Game/GameAsset/BP/GameInstance/GameMainInstance.GameMainInsta
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
 
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/PlagueProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/PlagueProject")
@@ -131,6 +130,10 @@ bLoadWidgetsOnDedicatedServer=True
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=DynamicModifiersOnly
+bForceRebuildOnLoad=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
