更新 主角軍刀-靈敏風格技能邏輯

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=62E7542E4DF51F954DBA4A8C7AC96861
-ProjectName=Third Person BP Game Template
+ProjectName=PlagueProjectDemo
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "F03ED2DD498C77E8C0AA99AFD9357B97", "PlagueProjectDemo")
 
 [StartupActions]
 bAddPacks=True
