更新 增加GIT lfs功能 更新 修改角色基底材質、不小心提交的大檔案刪除 更新 將一些不需要的打包Map移動到其他資料夾、修改Gameinstance.init的位置

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,45 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "F03ED2DD498C77E8C0A
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="E:/PlagueProjectDemo")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
+bSkipMovies=False
++MapsToCook=(FilePath="/Game/Map/GameMain")
++MapsToCook=(FilePath="/Game/Map/Lobby2")
++MapsToCook=(FilePath="/Game/Map/PreviewScene")
++MapsToCook=(FilePath="/Game/Map/DemoBattleMap")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
+
