更新 整個Demo完整流程(Boss戰的死亡之類的) 準備打包

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -135,6 +135,10 @@ r.CustomDepth=3
 RuntimeGeneration=Static
 bForceRebuildOnLoad=True
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bInitialBuildingLocked=False
+bShouldDiscardSubLevelNavData=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
