更新 更改角色貼圖大小、重新Compile一次

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 ProjectID=62E7542E4DF51F954DBA4A8C7AC96861
 ProjectName=PlagueProjectDemo
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "F03ED2DD498C77E8C0AA99AFD9357B97", "PlagueProjectDemo")
+CompanyName=OverBorderGameStudio
 
 [StartupActions]
 bAddPacks=True
@@ -46,5 +47,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Map/DemoBattleMap")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
