更新 優化教堂場景地圖、瓦格動畫

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,6 +22,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/PlagueProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/PlagueProject")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=122.000000))
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
