--- a/PlagueProject.uproject
+++ b/PlagueProject.uproject
@@ -67,7 +67,7 @@
 		},
 		{
 			"Name": "HorizonUIPlugin",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/8b94d073d32443b497d4a9e8b1e210f7"
 		},
 		{
