更新 內隱系統功能、AI吼叫測試環境

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,17 +1,6 @@
 [URL]
 GameName=PlagueProject
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/GameMain.GameMain
-GameDefaultMap=/Game/Map/GameMain.GameMain
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
-GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/GameAsset/BP/GameInstance/GameMainInstance.GameMainInstance_C
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
 bSupportsPortraitOrientation=False
@@ -159,6 +148,21 @@ DirtyAreasUpdateFreq=60.000000
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/ArtAsset/Sound/Setting_SoundClass/Plague_Master.Plague_Master
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Map/GameMain.GameMain
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/GameAsset/BP/GameInstance/GameMainInstance.GameMainInstance_C
+GameDefaultMap=/Game/Map/GameMain.GameMain
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
