--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -35,7 +35,7 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 bCookAll=False
-bCookMapsOnly=False
+bCookMapsOnly=True
 bCompressed=False
 bEncryptIniFiles=False
 bEncryptPakIndex=False
