更新 內隱記憶UI圖 修正教堂場景的碰撞

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -124,6 +124,7 @@ bLoadWidgetsOnDedicatedServer=True
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
+r.EarlyZPassOnlyMaterialMasking=True
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
